--- a/packages/nx-builders/package.json
+++ b/packages/nx-builders/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "build": "tsup-node",
     "postbuild": "cpy --cwd=src --parents --dot '**/*.json' ../dist/",
-    "dev:start": "tsup-node --watch",
+    "dev:start": "tsup-node --silent --watch",
     "lint": "prettier --loglevel warn --write src/ && eslint --ext .ts,.js,.tsx,.jsx --fix src/",
     "lint:check": "eslint --ext .ts,.js,.tsx,.jsx src/",
     "lint:staged": "lint-staged",
@@ -23,11 +23,11 @@
     "docs:jsdoc": "typedoc src/index.ts --readme none"
   },
   "lint-staged": {
-    "./**/*.{ts,js,tsx,jsx}": [
+    "*.{ts,js,tsx,jsx}": [
       "prettier --loglevel warn --write",
       "eslint --fix"
     ],
-    "./**/*.{json,md}": [
+    "*.{json,md}": [
       "prettier --loglevel warn --write"
     ]
   },
@@ -40,11 +40,11 @@
     "typescript": ">= 3.9.0"
   },
   "dependencies": {
-    "@angular-devkit/architect": "^0.1302.3",
-    "@angular-devkit/core": "^13.2.3",
-    "@angular-devkit/schematics": "^13.2.3",
-    "@nrwl/cli": "^13.8.2",
-    "@nrwl/devkit": "^13.8.2",
+    "@angular-devkit/architect": "^0.1303.2",
+    "@angular-devkit/core": "^13.3.2",
+    "@angular-devkit/schematics": "^13.3.2",
+    "@nrwl/cli": "^13.10.1",
+    "@nrwl/devkit": "^13.10.1",
     "@webundsoehne/deep-merge": "*",
     "@webundsoehne/nx-tools": "*",
     "delay": "^5.0.0",
