--- a/packages/nx-tools/package.json
+++ b/packages/nx-tools/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "build": "tsup-node",
     "postbuild": "cpy --cwd=src --parents --dot '**/*.json' ../dist/ && rimraf dist/**/files/ dist/**/assets/ && cpy --cwd=src --parents --dot '**/files/**' '**/assets/**' ../dist/",
-    "dev:start": "tsup-node --watch",
+    "dev:start": "tsup-node --silent --watch",
     "lint": "prettier --loglevel warn --write src/ && eslint --ext .ts,.js,.tsx,.jsx --fix src/",
     "lint:check": "eslint --ext .ts,.js,.tsx,.jsx src/",
     "lint:staged": "lint-staged",
@@ -22,11 +22,11 @@
     "docs:toc": "markdown-toc README.md --bullets='-' -i"
   },
   "lint-staged": {
-    "./**/*.{ts,js,tsx,jsx}": [
+    "*.{ts,js,tsx,jsx}": [
       "prettier --loglevel warn --write",
       "eslint --fix"
     ],
-    "./**/*.{json,md}": [
+    "*.{json,md}": [
       "prettier --loglevel warn --write"
     ]
   },
@@ -34,20 +34,20 @@
     "rxjs": ">= 7 < 8"
   },
   "dependencies": {
-    "@angular-devkit/architect": "^0.1302.3",
-    "@angular-devkit/core": "^13.2.3",
-    "@angular-devkit/schematics": "^13.2.3",
-    "@nrwl/cli": "^13.8.2",
-    "@nrwl/devkit": "^13.8.2",
-    "@nrwl/tao": "^13.8.2",
-    "@nrwl/workspace": "^13.8.2",
+    "@angular-devkit/architect": "^0.1303.2",
+    "@angular-devkit/core": "^13.3.2",
+    "@angular-devkit/schematics": "^13.3.2",
+    "@nrwl/cli": "^13.10.1",
+    "@nrwl/devkit": "^13.10.1",
+    "@nrwl/tao": "^13.10.1",
+    "@nrwl/workspace": "^13.10.1",
     "@types/micromatch": "^4.0.2",
     "@types/picomatch": "^2.3.0",
     "@webundsoehne/deep-merge": "*",
     "change-case": "^4.1.2",
     "colorette": "^2.0.16",
     "diff": "^5.0.0",
-    "eslint": "^8.9.0",
+    "eslint": "^8.13.0",
     "execa": "^5.1.1",
     "figures": "^3.0.0",
     "find-up": "^5.0.0",
@@ -74,7 +74,7 @@
     "@types/figures": "^3.0.1",
     "@types/fs-extra": "^9.0.13",
     "@types/nunjucks": "^3.2.1",
-    "@types/prettier": "^2.4.4",
+    "@types/prettier": "^2.6.0",
     "@types/rewire": "^2.5.28",
     "@types/which": "^2.0.1",
     "@types/winston": "^2.4.4"
