--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -64,9 +64,10 @@ publish:
   image: cenk1cenk2/pipe-semantic-release:latest
   variables:
     GIT_AUTHOR_NAME: semantic-release [bot]
-    GIT_AUTHOR_EMAIL: gitlab@tailored-apps.com
+    GIT_AUTHOR_EMAIL: $BANDAID_API_USER_EMAIL
     GIT_COMMITTER_NAME: semantic-release [bot]
-    GIT_COMMITTER_EMAIL: gitlab@tailored-apps.com
+    GIT_COMMITTER_EMAIL: $BANDAID_API_USER_EMAIL
+    GL_TOKEN: $BANDAID_API_TOKEN_WRIITE
     NPM_RC: $NPM_RC
     RUN_MULTI: 'true'
   script:
