--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,7 +67,7 @@ publish:
     GIT_AUTHOR_EMAIL: $BANDAID_API_USER_EMAIL
     GIT_COMMITTER_NAME: semantic-release [bot]
     GIT_COMMITTER_EMAIL: $BANDAID_API_USER_EMAIL
-    GL_TOKEN: $BANDAID_API_TOKEN_WRIITE
+    GL_TOKEN: $BANDAID_API_TOKEN_WRITE
     NPM_RC: $NPM_RC
     RUN_MULTI: 'true'
   script:
