feat: global exception filter with additional sentry reporting

--- a/packages/nestjs-util/package.json
+++ b/packages/nestjs-util/package.json
@@ -50,13 +50,17 @@
     "class-transformer": ">= 0.4.0",
     "class-validator": ">= 0.13.0",
     "express": ">= 4 < 5",
-    "fastify": ">= 3"
+    "fastify": ">= 3",
+    "@sentry/node": ">= 7 < 8"
   },
   "peerDependenciesMeta": {
     "fastify": {
       "optional": true
     },
     "express": {
+      "optional": true
+    },
+    "@sentry/node": {
       "optional": true
     }
   },
@@ -69,7 +73,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "express": "^4.17.3",
-    "fastify": "^3.27.0"
+    "fastify": "^3.27.0",
+    "@sentry/node": "^7.0.0"
   },
   "engines": {
     "node": ">= 16"
