perf(nx): update nx to version 14
BREAKING CHANGE:
contains breaking changes for how nestjs handles graphql and nx handles
nx.json

--- a/packages/nx-tools/package.json
+++ b/packages/nx-tools/package.json
@@ -34,31 +34,30 @@
     "rxjs": ">= 7 < 8"
   },
   "dependencies": {
-    "@angular-devkit/architect": "^0.1303.2",
-    "@angular-devkit/core": "^13.3.2",
-    "@angular-devkit/schematics": "^13.3.2",
-    "@nrwl/cli": "^13.10.1",
-    "@nrwl/devkit": "^13.10.1",
-    "@nrwl/tao": "^13.10.1",
-    "@nrwl/workspace": "^13.10.1",
+    "@angular-devkit/architect": "^0.1400.0",
+    "@angular-devkit/core": "^14.0.0",
+    "@angular-devkit/schematics": "^14.0.0",
+    "@nrwl/cli": "^14.1.9",
+    "@nrwl/devkit": "^14.1.9",
+    "@nrwl/nx": "^7.8.7",
+    "@nrwl/tao": "^14.1.9",
+    "@nrwl/workspace": "^14.1.9",
     "@types/micromatch": "^4.0.2",
     "@types/picomatch": "^2.3.0",
     "@webundsoehne/deep-merge": "*",
     "change-case": "^4.1.2",
-    "colorette": "^2.0.16",
-    "diff": "^5.0.0",
-    "eslint": "^8.13.0",
+    "colorette": "^2.0.17",
+    "diff": "^5.1.0",
+    "eslint": "^8.17.0",
     "execa": "^5.1.1",
     "figures": "^3.0.0",
     "find-up": "^5.0.0",
-    "fs-extra": "^10.0.0",
-    "glob": "^7.2.0",
+    "fs-extra": "^10.1.0",
     "globby": "^11.0.3",
     "listr2": "^4.0.4",
     "micromatch": "^4.0.4",
     "nunjucks": "^3.2.3",
-    "picomatch": "^2.3.1",
-    "pidtree": "^0.5.0",
+    "pidtree": "^0.6.0",
     "prettier": "^2.5.1",
     "rewire": "^6.0.0",
     "through": "^2.3.8",
@@ -70,11 +69,11 @@
   "devDependencies": {
     "@types/deepmerge": "^2.2.0",
     "@types/diff": "^5.0.2",
-    "@types/eslint": "^8.4.1",
+    "@types/eslint": "^8.4.2",
     "@types/figures": "^3.0.1",
     "@types/fs-extra": "^9.0.13",
     "@types/nunjucks": "^3.2.1",
-    "@types/prettier": "^2.6.0",
+    "@types/prettier": "^2.6.3",
     "@types/rewire": "^2.5.28",
     "@types/which": "^2.0.1",
     "@types/winston": "^2.4.4"
