--- a/packages/nestjs-util/package.json
+++ b/packages/nestjs-util/package.json
@@ -34,11 +34,11 @@
   },
   "dependencies": {
     "@webundsoehne/deep-merge": "*",
-    "colorette": "^2.0.16",
+    "colorette": "^2.0.17",
     "config": "^3.3.7",
-    "fs-extra": "^10.0.0",
+    "fs-extra": "^10.1.0",
     "js-yaml": "^4.0.0",
-    "moment": "^2.29.1",
+    "moment": "^2.29.3",
     "reflect-metadata": "^0.1.13",
     "winston": "^3.6.0",
     "winston-transport": "^4.5.0"
@@ -47,11 +47,11 @@
     "@nestjs/common": ">= 8 < 10",
     "@nestjs/core": ">= 8 < 10",
     "@nestjs/microservices": ">= 8 < 10",
+    "@sentry/node": ">= 7 < 8",
     "class-transformer": ">= 0.4.0",
     "class-validator": ">= 0.13.0",
     "express": ">= 4 < 5",
-    "fastify": ">= 3",
-    "@sentry/node": ">= 7 < 8"
+    "fastify": ">= 3"
   },
   "peerDependenciesMeta": {
     "fastify": {
@@ -65,16 +65,16 @@
     }
   },
   "devDependencies": {
-    "@nestjs/common": "^8.3.1",
-    "@nestjs/core": "^8.3.1",
+    "@nestjs/common": "^8.4.6",
+    "@nestjs/core": "^8.4.6",
+    "@sentry/node": "^7.0.0",
     "@types/config": "^0.0.41",
     "@types/express": "^4.17.3",
     "@types/winston": "^2.4.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "express": "^4.17.3",
-    "fastify": "^3.27.0",
-    "@sentry/node": "^7.0.0"
+    "express": "^4.18.1",
+    "fastify": "^3.29.0"
   },
   "engines": {
     "node": ">= 16"
