perf: nx14 upgrade
this might break older versions due to structural changes and major dependency updates

--- a/packages/deep-merge/package.json
+++ b/packages/deep-merge/package.json
@@ -17,7 +17,7 @@
   ],
   "scripts": {
     "build": "tsup-node",
-    "dev:start": "tsup-node --silent --watch",
+    "dev:start": "tsup-node --watch",
     "lint": "prettier --loglevel warn --write src/ && eslint --ext .ts,.js,.tsx,.jsx --fix src/",
     "lint:check": "eslint --ext .ts,.js,.tsx,.jsx src/",
     "lint:staged": "lint-staged",
