--- a/packages/nx-tools/package.json
+++ b/packages/nx-tools/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "build": "tsup-node",
     "postbuild": "cpy --cwd=src --parents --dot '**/*.json' ../dist/ && rimraf dist/**/files/ dist/**/assets/ && cpy --cwd=src --parents --dot '**/files/**' '**/assets/**' ../dist/",
-    "dev:start": "tsup-node --silent --watch",
+    "dev:start": "tsup-node --watch",
     "lint": "prettier --loglevel warn --write src/ && eslint --ext .ts,.js,.tsx,.jsx --fix src/",
     "lint:check": "eslint --ext .ts,.js,.tsx,.jsx src/",
     "lint:staged": "lint-staged",
@@ -34,14 +34,14 @@
     "rxjs": ">= 7 < 8"
   },
   "dependencies": {
-    "@angular-devkit/architect": "^0.1400.0",
-    "@angular-devkit/core": "^14.0.0",
-    "@angular-devkit/schematics": "^14.0.0",
-    "@nrwl/cli": "^14.1.9",
-    "@nrwl/devkit": "^14.1.9",
+    "@angular-devkit/architect": "^0.1401.1",
+    "@angular-devkit/core": "^14.1.1",
+    "@angular-devkit/schematics": "^14.1.1",
+    "@nrwl/cli": "^14.5.4",
+    "@nrwl/devkit": "^14.5.4",
     "@nrwl/nx": "^7.8.7",
-    "@nrwl/tao": "^14.1.9",
-    "@nrwl/workspace": "^14.1.9",
+    "@nrwl/tao": "^14.5.4",
+    "@nrwl/workspace": "^14.5.4",
     "@types/micromatch": "^4.0.2",
     "@types/picomatch": "^2.3.0",
     "@webundsoehne/deep-merge": "*",
@@ -69,11 +69,11 @@
   "devDependencies": {
     "@types/deepmerge": "^2.2.0",
     "@types/diff": "^5.0.2",
-    "@types/eslint": "^8.4.2",
+    "@types/eslint": "^8.4.5",
     "@types/figures": "^3.0.1",
     "@types/fs-extra": "^9.0.13",
     "@types/nunjucks": "^3.2.1",
-    "@types/prettier": "^2.6.3",
+    "@types/prettier": "^2.7.0",
     "@types/rewire": "^2.5.28",
     "@types/which": "^2.0.1",
     "@types/winston": "^2.4.4"
