--- a/package.json
+++ b/package.json
@@ -33,29 +33,31 @@
     "prepare-commit-msg": "[ -t 1 ] && exec < /dev/tty && git cz --hook || true"
   },
   "resolutions": {
-    "**/rxjs": "7.5.5",
-    "**/@angular-devkit/architect": "0.1400.0",
-    "**/@angular-devkit/core": "14.0.0",
-    "**/@angular-devkit/schematics": "14.0.0"
+    "**/rxjs": "7.5.6",
+    "**/@angular-devkit/architect": "0.1401.1",
+    "**/@angular-devkit/core": "14.1.1",
+    "**/@angular-devkit/schematics": "14.1.1"
   },
   "devDependencies": {
     "@anatine/esbuild-decorators": "^0.2.18",
     "@cenk1cenk2/cz-cc": "^1.5.3",
-    "@types/node": "^17.0.40",
-    "commitizen": "^4.2.4",
+    "@types/node": "^18.6.4",
+    "commitizen": "^4.2.5",
     "cpy-cli": "^3.1.1",
-    "lerna": "^5.0.0",
-    "lint-staged": "^13.0.0",
+    "cz-conventional-changelog": "^3.3.0",
+    "glob": "^8.0.3",
+    "lerna": "^5.3.0",
+    "lint-staged": "^13.0.3",
     "markdown-toc": "^1.2.0",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.5.5",
+    "rxjs": "^7.5.6",
     "simple-git-hooks": "^2.8.0",
     "tsc-watch": "^5.0.3",
     "tsconfig-replace-paths": "^0.0.11",
-    "tsup": "6.1.0",
-    "typedoc": "^0.22.17",
-    "typedoc-plugin-markdown": "^3.12.1",
-    "typescript": "^4.7.3"
+    "tsup": "6.2.1",
+    "typedoc": "^0.23.10",
+    "typedoc-plugin-markdown": "^3.13.4",
+    "typescript": "^4.7.4"
   },
   "config": {
     "commitizen": {
