--- a/packages/nestjs-keycloak-seeder/package.json
+++ b/packages/nestjs-keycloak-seeder/package.json
@@ -17,7 +17,7 @@
   ],
   "scripts": {
     "build": "tsup-node",
-    "dev:start": "tsup-node --silent --watch",
+    "dev:start": "tsup-node --watch",
     "lint": "prettier --loglevel warn --write src/ && eslint --ext .ts,.js,.tsx,.jsx --fix src/",
     "lint:check": "eslint --ext .ts,.js,.tsx,.jsx src/",
     "lint:staged": "lint-staged",
@@ -38,7 +38,7 @@
     "@webundsoehne/ts-utility-types": "*"
   },
   "devDependencies": {
-    "@nestjs/common": "^8.4.6"
+    "@nestjs/common": "^9.0.8"
   },
   "peerDependencies": {
     "@keycloak/keycloak-admin-client": ">= 15",
