--- a/packages/nestjs-keycloak/package.json
+++ b/packages/nestjs-keycloak/package.json
@@ -16,7 +16,7 @@
   ],
   "scripts": {
     "build": "tsup-node",
-    "dev:start": "tsup-node --silent --watch",
+    "dev:start": "tsup-node --watch",
     "lint": "prettier --loglevel warn --write src/ && eslint --ext .ts,.js,.tsx,.jsx --fix src/",
     "lint:check": "eslint --ext .ts,.js,.tsx,.jsx src/",
     "lint:staged": "lint-staged",
@@ -34,15 +34,15 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@keycloak/keycloak-admin-client": "^18.0.0",
-    "@nestjs/common": "^8.4.6",
-    "@nestjs/core": "^8.4.6",
-    "@nestjs/graphql": "^10.0.15",
+    "@keycloak/keycloak-admin-client": "^19.0.1",
+    "@nestjs/common": "^9.0.8",
+    "@nestjs/core": "^9.0.8",
+    "@nestjs/graphql": "^10.0.21",
     "@types/express": "^4.17.3",
     "express": "^4.18.1",
-    "fastify": "^3.29.0",
+    "fastify": "^4.3.0",
     "graphql": "^16.5.0",
-    "keycloak-connect": "^18.0.0"
+    "keycloak-connect": "^19.0.1"
   },
   "peerDependencies": {
     "@keycloak/keycloak-admin-client": ">= 15",
