--- a/packages/nestjs-seeder/package.json
+++ b/packages/nestjs-seeder/package.json
@@ -18,7 +18,7 @@
   ],
   "scripts": {
     "build": "tsup-node",
-    "dev:start": "tsup-node --silent --watch",
+    "dev:start": "tsup-node --watch",
     "lint": "prettier --loglevel warn --write src/ && eslint --ext .ts,.js,.tsx,.jsx --fix src/",
     "lint:check": "eslint --ext .ts,.js,.tsx,.jsx src/",
     "lint:staged": "lint-staged",
@@ -39,8 +39,8 @@
     "@webundsoehne/ts-utility-types": "*"
   },
   "devDependencies": {
-    "@nestjs/common": "^8.4.6",
-    "@nestjs/core": "^8.4.6"
+    "@nestjs/common": "^9.0.8",
+    "@nestjs/core": "^9.0.8"
   },
   "peerDependencies": {
     "@nestjs/common": ">= 8",
