--- a/packages/nestjs-util-microservices/package.json
+++ b/packages/nestjs-util-microservices/package.json
@@ -16,7 +16,7 @@
   ],
   "scripts": {
     "build": "tsup-node",
-    "dev:start": "tsup-node --silent --watch",
+    "dev:start": "tsup-node --watch",
     "lint": "prettier --loglevel warn --write src/ && eslint --ext .ts,.js,.tsx,.jsx --fix src/",
     "lint:check": "eslint --ext .ts,.js,.tsx,.jsx src/",
     "lint:staged": "lint-staged",
@@ -41,12 +41,12 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@nestjs/common": "^8.4.6",
-    "@nestjs/core": "^8.4.6",
-    "@nestjs/microservices": "^8.4.6",
+    "@nestjs/common": "^9.0.8",
+    "@nestjs/core": "^9.0.8",
+    "@nestjs/microservices": "^9.0.8",
     "@webundsoehne/nestjs-util": "*",
     "amqp-connection-manager": "^4.1.3",
-    "amqplib": "^0.10.0"
+    "amqplib": "^0.10.1"
   },
   "engines": {
     "node": ">= 16"
