--- a/packages/nestjs-util-restful/package.json
+++ b/packages/nestjs-util-restful/package.json
@@ -16,7 +16,7 @@
   ],
   "scripts": {
     "build": "tsup-node",
-    "dev:start": "tsup-node --silent --watch",
+    "dev:start": "tsup-node --watch",
     "lint": "prettier --loglevel warn --write src/ && eslint --ext .ts,.js,.tsx,.jsx --fix src/",
     "lint:check": "eslint --ext .ts,.js,.tsx,.jsx src/",
     "lint:staged": "lint-staged",
@@ -62,17 +62,17 @@
     "moment": "^2.29.3"
   },
   "devDependencies": {
-    "@nestjs/common": "^8.4.6",
-    "@nestjs/core": "^8.4.6",
-    "@nestjs/swagger": "^5.2.0",
-    "@types/config": "^0.0.41",
+    "@nestjs/common": "^9.0.8",
+    "@nestjs/core": "^9.0.8",
+    "@nestjs/swagger": "^6.0.5",
+    "@types/config": "^3.3.0",
     "@types/express": "^4.17.3",
     "@types/fs-extra": "^9.0.13",
     "@webundsoehne/nestjs-util": "*",
     "express": "^4.18.1",
-    "fastify": "^3.29.0",
+    "fastify": "^4.3.0",
     "fastify-swagger": "^5.2.0",
-    "swagger-ui-express": "^4.4.0"
+    "swagger-ui-express": "^4.5.0"
   },
   "engines": {
     "node": ">= 16"
