--- a/packages/nx-workspace/package.json
+++ b/packages/nx-workspace/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "build": "tsup-node",
     "postbuild": "cpy --cwd=src --parents --dot '**/*.json' ../dist/ && rimraf dist/**/files/ dist/**/assets/ && cpy --cwd=src --parents --dot '**/files/**' '**/assets/**' ../dist/",
-    "dev:start": "tsup-node --silent --watch",
+    "dev:start": "tsup-node --watch",
     "lint": "prettier --loglevel warn --write src/ && eslint --ext .ts,.js,.tsx,.jsx --fix src/",
     "lint:check": "eslint --ext .ts,.js,.tsx,.jsx src/",
     "lint:staged": "lint-staged",
@@ -32,15 +32,15 @@
     ]
   },
   "dependencies": {
-    "@angular-devkit/core": "^14.0.0",
-    "@angular-devkit/schematics": "^14.0.0",
-    "@nrwl/devkit": "^14.1.9",
-    "@nrwl/workspace": "^14.1.9",
+    "@angular-devkit/core": "^14.1.1",
+    "@angular-devkit/schematics": "^14.1.1",
+    "@nrwl/devkit": "^14.5.4",
+    "@nrwl/workspace": "^14.5.4",
     "@webundsoehne/deep-merge": "*",
     "@webundsoehne/nx-builders": "*",
     "@webundsoehne/nx-tools": "*",
     "enquirer": "^2.3.6",
-    "listr2": "^4.0.4",
+    "listr2": "^5.0.1",
     "typescript": "^4.7.3"
   },
   "engines": {
