--- a/packages/patch-package/package.json
+++ b/packages/patch-package/package.json
@@ -54,25 +54,18 @@
     }
   },
   "dependencies": {
-    "@cenk1cenk2/boilerplate-oclif": "^1.10.6",
-    "@oclif/command": "^1.8.16",
-    "@oclif/config": "^1.18.2",
-    "@oclif/errors": "^1.3.5",
-    "@oclif/plugin-help": "^5.1.10",
-    "fs-extra": "^10.1.0",
-    "globby": "^11.0.3",
-    "listr2": "^4.0.4",
+    "@cenk1cenk2/oclif-common": "^2.3.0",
+    "@oclif/core": "^1.14.1",
     "patch-package": "^6.4.7",
     "rewire": "^6.0.0",
     "tmp-promise": "^3.0.3",
-    "tslib": "^2.4.0",
     "wrap-ansi": "^7"
   },
   "devDependencies": {
-    "@oclif/dev-cli": "^1.26.10",
-    "@types/fs-extra": "^9.0.13",
     "@types/rewire": "^2.5.28",
-    "@types/wrap-ansi": "^3"
+    "@types/wrap-ansi": "^3",
+    "globby": "^11.0.3",
+    "oclif": "^3"
   },
   "engines": {
     "node": ">= 16"
