WIP: update nx tools listr config

--- a/packages/brownie/package.json
+++ b/packages/brownie/package.json
@@ -59,7 +59,7 @@
     "topicSeparator": ":"
   },
   "dependencies": {
-    "@cenk1cenk2/oclif-common": "^3.0.4",
+    "@cenk1cenk2/oclif-common": "^3.4.0",
     "@oclif/core": "^1.14.1",
     "@oclif/plugin-help": "^5.1.10",
     "@webundsoehne/deep-merge": "*",
@@ -67,12 +67,15 @@
     "axios": "^0.27.2",
     "enquirer": "^2.3.6",
     "execa": "^5.1.1",
+    "fs-extra": "^10.1.0",
     "listr2": "^5.0.5",
     "nunjucks": "^3.2.3",
+    "update-notifier": "^6.0.2",
     "update-notifier2": "^1.0.6",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/fs-extra": "^9.0.13",
     "globby": "^11.0.3",
     "oclif": "^3"
   },
