--- a/packages/patch-package/package.json
+++ b/packages/patch-package/package.json
@@ -37,34 +37,42 @@
   },
   "files": [
     "bin/",
-    "config/",
     "dist/",
     "patches/"
   ],
   "oclif": {
+    "bin": "ws-path-package",
+    "dirname": "ws-patch-package",
     "commands": "./dist/commands",
-    "bin": "ws-patch-package",
     "plugins": [
       "@oclif/plugin-help"
     ],
     "hooks": {
-      "init": "./dist/hooks/init.hook",
-      "command_not_found": "./dist/hooks/not-found.hook",
-      "prerun": "./dist/hooks/prerun.hook"
-    }
+      "init": [
+        "./dist/hooks/update.hook"
+      ],
+      "command_not_found": "./dist/hooks/not-found.hook"
+    },
+    "topicSeparator": ":"
   },
   "dependencies": {
-    "@cenk1cenk2/oclif-common": "^3.2.1",
+    "@cenk1cenk2/oclif-common": "^3.8.0",
     "@oclif/core": "^1.14.1",
+    "@oclif/plugin-help": "^5.1.10",
+    "enquirer": "^2.3.6",
+    "fs-extra": "^10.1.0",
+    "listr2": "^5.0.5",
+    "update-notifier": "^6.0.2",
     "patch-package": "^6.4.7",
     "rewire": "^6.0.0",
     "tmp-promise": "^3.0.3",
+    "globby": "^11.0.3",
     "wrap-ansi": "^7"
   },
   "devDependencies": {
     "@types/rewire": "^2.5.28",
     "@types/wrap-ansi": "^3",
-    "globby": "^11.0.3",
+    "@types/fs-extra": "^9.0.13",
     "oclif": "^3"
   },
   "engines": {
