--- a/package.json
+++ b/package.json
@@ -33,31 +33,33 @@
     "prepare-commit-msg": "[ -t 1 ] && exec < /dev/tty && git cz --hook || true"
   },
   "resolutions": {
-    "**/rxjs": "7.5.6",
-    "**/@angular-devkit/architect": "0.1402.3",
-    "**/@angular-devkit/core": "14.2.3",
-    "**/@angular-devkit/schematics": "14.2.3"
+    "**/rxjs": "7.5.7",
+    "**/@angular-devkit/architect": "0.1402.4",
+    "**/@angular-devkit/core": "14.2.4",
+    "**/@angular-devkit/schematics": "14.1.3",
+    "**/listr2": "4.0.5",
+    "**/enquirer": "2.3.6"
   },
   "devDependencies": {
     "@anatine/esbuild-decorators": "^0.2.18",
-    "@cenk1cenk2/cz-cc": "^1.5.3",
-    "@types/node": "^18.7.6",
+    "@cenk1cenk2/cz-cc": "^1.5.4",
+    "@types/node": "^18.8.2",
     "commitizen": "^4.2.5",
     "cpy-cli": "^3.1.1",
     "cz-conventional-changelog": "^3.3.0",
     "glob": "^8.0.3",
-    "lerna": "^5.4.3",
+    "lerna": "^5.5.4",
     "lint-staged": "^13.0.3",
     "markdown-toc": "^1.2.0",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.5.6",
+    "rxjs": "^7.5.7",
     "simple-git-hooks": "^2.8.0",
     "tsc-watch": "^5.0.3",
     "tsconfig-replace-paths": "^0.0.11",
     "tsup": "6.2.3",
     "typedoc": "^0.23.15",
     "typedoc-plugin-markdown": "^3.13.4",
-    "typescript": "^4.7.4"
+    "typescript": "^4.8.4"
   },
   "config": {
     "commitizen": {
