--- a/packages/nx-tools/package.json
+++ b/packages/nx-tools/package.json
@@ -34,27 +34,28 @@
     "rxjs": ">= 7 < 8"
   },
   "dependencies": {
-    "@angular-devkit/architect": "^0.1402.3",
-    "@angular-devkit/core": "^14.2.3",
-    "@angular-devkit/schematics": "^14.2.3",
-    "@nrwl/cli": "^14.7.6",
-    "@nrwl/devkit": "^14.7.6",
+    "@angular-devkit/architect": "^0.1402.4",
+    "@angular-devkit/core": "^14.2.4",
+    "@angular-devkit/schematics": "^14.1.3",
+    "@nrwl/cli": "^14.8.3",
+    "@nrwl/devkit": "^14.8.3",
     "@nrwl/nx": "^7.8.7",
-    "@nrwl/tao": "^14.7.6",
-    "@nrwl/workspace": "^14.7.6",
+    "@nrwl/tao": "^14.8.3",
+    "@nrwl/workspace": "^14.8.3",
     "@types/micromatch": "^4.0.2",
     "@types/picomatch": "^2.3.0",
     "@webundsoehne/deep-merge": "*",
     "change-case": "^4.1.2",
     "colorette": "^2.0.17",
     "diff": "^5.1.0",
-    "eslint": "^8.22.0",
+    "enquirer": "^2.3.6",
+    "eslint": "^8.24.0",
     "execa": "^5.1.1",
     "figures": "^3.0.0",
     "find-up": "^5.0.0",
     "fs-extra": "^10.1.0",
     "globby": "^11.0.3",
-    "listr2": "^4.0.4",
+    "listr2": "^4.0.5",
     "micromatch": "^4.0.4",
     "nunjucks": "^3.2.3",
     "pidtree": "^0.6.0",
@@ -73,7 +74,7 @@
     "@types/figures": "^3.0.1",
     "@types/fs-extra": "^9.0.13",
     "@types/nunjucks": "^3.2.1",
-    "@types/prettier": "^2.7.0",
+    "@types/prettier": "^2.7.1",
     "@types/rewire": "^2.5.28",
     "@types/which": "^2.0.1",
     "@types/winston": "^2.4.4"
