fix(deps): identify and move project root packages to peer deps

--- a/packages/nestjs-util/package.json
+++ b/packages/nestjs-util/package.json
@@ -54,6 +54,9 @@
     "fastify": ">= 3"
   },
   "peerDependenciesMeta": {
+    "express": {
+      "optional": true
+    },
     "fastify": {
       "optional": true
     },
