--- a/packages/nestjs-graphql-typeorm-dataloader/package.json
+++ b/packages/nestjs-graphql-typeorm-dataloader/package.json
@@ -38,6 +38,7 @@
   "peerDependencies": {
     "@nestjs/common": ">= 8 < 10",
     "@nestjs/core": ">= 8 < 10",
+    "@nestjs/graphql": ">= 10",
     "rxjs": ">= 7 < 8"
   },
   "dependencies": {
@@ -51,6 +52,7 @@
   "devDependencies": {
     "@apollo/gateway": "^2.1.3",
     "@nestjs/graphql": "^10.1.3",
+    "@nestjs/common": "^9.1.4",
     "@types/jest": "^29.1.1",
     "@types/lodash": "^4.14.186",
     "@types/uuid": "^8.3.4",
