--- a/packages/nestjs-util-restful/package.json
+++ b/packages/nestjs-util-restful/package.json
@@ -33,13 +33,13 @@
     ]
   },
   "peerDependencies": {
-    "@nestjs/common": ">= 8 < 10",
-    "@nestjs/core": ">= 8 < 10",
-    "@nestjs/swagger": ">= 5 < 6",
+    "@nestjs/common": ">= 9 < 10",
+    "@nestjs/core": ">= 9 < 10",
+    "@nestjs/swagger": ">= 5 < 7",
     "@webundsoehne/nestjs-util": ">= 5",
     "express": ">= 4 < 5",
-    "fastify": ">= 3",
-    "fastify-swagger": ">= 4 < 5",
+    "fastify": ">= 4",
+    "@fastify/swagger": ">= 8",
     "rxjs": ">= 7 < 8",
     "swagger-ui-express": ">= 4 < 5"
   },
@@ -71,8 +71,9 @@
     "@webundsoehne/nestjs-util": "*",
     "express": "^4.18.1",
     "fastify": "^4.7.0",
-    "fastify-swagger": "^5.2.0",
-    "swagger-ui-express": "^4.5.0"
+    "@fastify/swagger": "^8.0.0",
+    "swagger-ui-express": "^4.5.0",
+    "reflect-metadata": "^0.1.13"
   },
   "engines": {
     "node": ">= 16"
