--- a/packages/nx-builders/package.json
+++ b/packages/nx-builders/package.json
@@ -33,6 +33,8 @@
   },
   "peerDependencies": {
     "@nrwl/workspace": "*",
+    "@nrwl/devkit": ">= 14",
+    "nx": ">= 14",
     "ts-node": ">= 8.10.0",
     "ts-node-dev": ">= 1.0.0",
     "tsc-watch": ">= 4.2.0",
@@ -43,8 +45,6 @@
     "@angular-devkit/architect": "^0.1402.5",
     "@angular-devkit/core": "^14.2.5",
     "@angular-devkit/schematics": "^14.2.5",
-    "@nrwl/cli": "^14.8.3",
-    "@nrwl/devkit": "^14.8.3",
     "@webundsoehne/deep-merge": "*",
     "@webundsoehne/nx-tools": "*",
     "delay": "^5.0.0",
@@ -56,7 +56,10 @@
   "devDependencies": {
     "@types/execa": "^2.0.0",
     "@types/fs-extra": "^9.0.13",
-    "@types/tsc-watch": "^4.2.0"
+    "@types/tsc-watch": "^4.2.0",
+    "@nrwl/workspace": "^14.8.6",
+    "@nrwl/devkit": "^14.8.6",
+    "nx": "^14.8.6"
   },
   "engines": {
     "node": ">= 16"
