--- a/packages/nx-tools/package.json
+++ b/packages/nx-tools/package.json
@@ -31,19 +31,16 @@
     ]
   },
   "peerDependencies": {
-    "rxjs": ">= 7 < 8"
+    "rxjs": ">= 7 < 8",
+    "@nrwl/cli": ">= 14",
+    "@nrwl/devkit": ">= 14",
+    "@nrwl/tao": ">= 14",
+    "@nrwl/workspace": ">= 14"
   },
   "dependencies": {
     "@angular-devkit/architect": "^0.1402.5",
     "@angular-devkit/core": "^14.2.5",
     "@angular-devkit/schematics": "^14.2.5",
-    "@nrwl/cli": "^14.8.3",
-    "@nrwl/devkit": "^14.8.3",
-    "@nrwl/nx": "^7.8.7",
-    "@nrwl/tao": "^14.8.3",
-    "@nrwl/workspace": "^14.8.3",
-    "@types/micromatch": "^4.0.2",
-    "@types/picomatch": "^2.3.0",
     "@webundsoehne/deep-merge": "*",
     "change-case": "^4.1.2",
     "colorette": "^2.0.17",
@@ -73,6 +70,8 @@
     "@types/eslint": "^8.4.5",
     "@types/figures": "^3.0.1",
     "@types/fs-extra": "^9.0.13",
+    "@types/micromatch": "^4.0.2",
+    "@types/picomatch": "^2.3.0",
     "@types/nunjucks": "^3.2.1",
     "@types/prettier": "^2.7.1",
     "@types/rewire": "^2.5.28",
