fix: update build mechanism for all repositories, fix tsc-watch for builders

--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "link-packages": "lerna link --force-local",
     "lint": "yarn command --concurrency 1 --no-bail lint",
     "lint:check": "yarn command --parallel --no-bail lint:check",
-    "lint:staged": "yarn exec lint-staged",
     "scripts:link": "./scripts/link-packages.sh link",
     "scripts:unlink": "./scripts/link-packages.sh unlink",
     "scripts:workspace:link": "./scripts/link-packages-to-workspace.sh link",
@@ -29,35 +28,36 @@
     "packages/*"
   ],
   "simple-git-hooks": {
-    "pre-commit": "yarn run lint:staged",
+    "pre-commit": "yarn exec lint-staged",
     "prepare-commit-msg": "[ -t 1 ] && exec < /dev/tty && git cz --hook || true"
   },
   "resolutions": {
     "**/rxjs": "7.5.7",
-    "**/@angular-devkit/architect": "0.1402.5",
-    "**/@angular-devkit/core": "14.2.5",
-    "**/@angular-devkit/schematics": "14.2.5",
-    "**/listr2": "4.0.5",
-    "**/enquirer": "2.3.6"
+    "**/@angular-devkit/architect": "0.1402.7",
+    "**/@angular-devkit/core": "14.2.7",
+    "**/@angular-devkit/schematics": "14.2.7"
   },
   "devDependencies": {
     "@anatine/esbuild-decorators": "^0.2.18",
     "@cenk1cenk2/cz-cc": "^1.5.4",
-    "@types/node": "^18.8.2",
+    "@types/node": "^18.11.8",
+    "@types/rimraf": "^3.0.2",
     "commitizen": "^4.2.5",
-    "cpy-cli": "^3.1.1",
+    "cpy": "^8",
     "cz-conventional-changelog": "^3.3.0",
+    "esbuild-plugin-copy": "^1.6.0",
     "glob": "^8.0.3",
-    "lerna": "^5.5.4",
+    "lerna": "^6.0.1",
     "lint-staged": "^13.0.3",
     "markdown-toc": "^1.2.0",
+    "nx": "^15.0.4",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.7",
-    "simple-git-hooks": "^2.8.0",
+    "simple-git-hooks": "^2.8.1",
     "tsc-watch": "^5.0.3",
     "tsconfig-replace-paths": "^0.0.11",
-    "tsup": "6.2.3",
-    "typedoc": "^0.23.15",
+    "tsup": "6.3.0",
+    "typedoc": "^0.23.19",
     "typedoc-plugin-markdown": "^3.13.4",
     "typescript": "^4.8.4"
   },
