--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,6 @@
 {
-  "packages": [
-    "packages/*"
-  ],
+  "useNx": true,
+  "packages": ["packages/*"],
   "npmClient": "yarn",
   "useWorkspaces": true,
   "command": {
