--- a/packages/brownie/package.json
+++ b/packages/brownie/package.json
@@ -60,25 +60,25 @@
   },
   "dependencies": {
     "@cenk1cenk2/oclif-common": "^3.8.1",
-    "@oclif/core": "^1.16.4",
-    "@oclif/plugin-help": "^5.1.14",
+    "@oclif/core": "^1.20.2",
+    "@oclif/plugin-help": "^5.1.17",
     "@webundsoehne/deep-merge": "*",
     "@webundsoehne/nx-tools": "*",
     "axios": "^0.27.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "enquirer": "^2.3.6",
     "execa": "^5.1.1",
     "fs-extra": "^10.1.0",
     "listr2": "^4.0.5",
     "nunjucks": "^3.2.3",
     "update-notifier": "^6.0.2",
-    "update-notifier2": "^1.0.6",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2"
+    "update-notifier2": "^1.0.6"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.13",
     "globby": "^11.0.3",
-    "oclif": "^3.2.13"
+    "oclif": "^3.2.24"
   },
   "engines": {
     "node": ">= 16"
